workspace = { members = ["croissant-test"] }
[package]
name = "croissant"
version = "0.0.0-alpha"
edition = "2021"
description = "A scheduling library."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt"], optional = true }
chrono = "0.4.33"

[features]
async = ["dep:tokio"]
