[package]
name = "croissant-macro"
version = "0.0.1"
edition = "2021"
description = "Procedural macro library for Croissant"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
