[package]
name = "croissant-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
croissant = { path = "../", features = ["async"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"
chrono = "0.4.33"
